Break headings in share preview to prevent overflow

--- a/css/public-share.css
+++ b/css/public-share.css
@@ -14,6 +14,7 @@
 .preview h2,
 .preview h3 {
 	margin-top: 1em;
+	word-wrap: break-word;
 }
 
 .preview h1 {
